Changes in version 1.1-2 (xx/xx/15)

Changes in version 1.1-1 (01/15/15)
    * DSC_DStream: fixed bug with removing too many sporadic grids
    * DSD_ReadCSV now uses readLine so it can read properly from URLs
    * updated vignette

Changes in version 1.1-0 (12/18/14)
    * update now directly dispatches
    * DSC_Memory replaces DSD_Wrapper
    * DSD_ReadCSV replaces DSD_ReadStream. Improved handling of blocking and
      end of stream.
    * added DSD_ReadDB (DBI interface)
    * get_points can now produce cluster and class information

Changes in version 1.0-3 (07/14/14)
    * Fixed precision and recall calculation
    * Added DSC_TwoStage

Changes in version 1.0-2 (06/16/14)
    * Warning for reclusterers removed.
    * plot can now show micro-cluster assignment areas using assignment=TRUE

Changes in version 1.0-1 (06/12/14)
    * Improved documentation
    * Improved DSD_MG
    * plot gained a dim argument to plot only selected dimensions
    * get_assignment gained a threshold argument
    * DSC_Window added
    * DSC_Sample gained a biased argument for biased sampling
    * DSC_Wrapper can now wrap matrix-like objects (e.g., from package ff and
        bigmemory)

Changes in version 1.0-0 (5/24/14)
    * added D-Stream (with attraction)
    * improved support for creating animations
    * tnn: new decay models, tNN without shared density now reclusters 
        using density reachability
    * plot gained the type "both" that plots micro and macro-clusters
    * DSC_Hierarchical and DSC_Kmeans gained min_weight to filter low weight
        micro-clusters before reclustering
    * removed default radius, etc. for most clustering algorithms
    * Added DSD_MG for simulating streams with concept drift
    * moved MOA related code to streamMOA
    * suspended DSC_BIRCH because of memory issues
    * reset_stream gained a pos argument

Changes in version 0.2-0 (2/21/14)
    * major restructuring

Initial version 0.1-1 (8/16/13)