@@ -1,4 +1,6 @@
 Changes in version 1.1-2 (xx/xx/15)
+    * evaluate checks if DSD has cluster labels for external evaluation measures.
+    * DSD_mlbenchmarkGenerator now shuffles data points
 
 Changes in version 1.1-1 (01/15/15)
     * DSC_DStream: fixed bug with removing too many sporadic grids
